Address comments, fix duration bug, fix app list table wrapping

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -107,7 +107,7 @@
 }
 
 .app-sortable-table__cell--wrap {
-  max-width: 24ch;
+  max-width: 20ch;
   white-space: normal;
   overflow-wrap: anywhere;
   word-break: break-word;
